app/k8s/03-service-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-demo-clusterip
  namespace: k8s-demo
spec:
  type: ClusterIP
  selector:
    app: k8s-demo
  ports:
    - port: 80
      targetPort: 8080
